2004-12-03  Werner Koch  <wk@g10code.com>

	Released 0.9.10.
	
	* configure.ac: Bumped LT version to C13/A5/R2.

2004-11-25  Werner Koch  <wk@g10code.com>

	* configure.ac: Define CROSS_COMPILING make conditional
	* Makefile.am (SUBDIRS): Don't run tests when cross compiling.

2004-09-27  Werner Koch  <wk@g10code.com>

	Released 0.9.9.

	* configure.ac: Bumped LT version to C13/A5/R2.
	
	* configure.ac: AC_GNU_SOURCE instead of AH_TOP.
	* config.guess, config.sub: Updated.
	* ltmain.sh: Updated to 1.5.6

2004-07-22  Werner Koch  <wk@g10code.de>

	Released 0.9.8.

	* configure.ac: Bumped LT version to C13/A5/R1.

2004-06-08  Werner Koch  <wk@gnupg.org>

	Released 0.9.7.
	
	* configure.ac: Bumped LT version to C13/A5/R0.

2004-04-29  Werner Koch  <wk@gnupg.org>

	Released 0.9.6.
	
	* configure.ac: Bumped LT version to C12/A4/R0.

2004-04-02  Thomas Schwinge  <schwinge@nic-nac-project.de>

	* autogen.sh: Added ACLOCAL_FLAGS.

2004-04-06  Werner Koch  <wk@gnupg.org>

	Released 0.9.5.

	* configure.ac: Bumped LT versions to C11/A3/R0.
	* config.guess, config.sub, ltmain.sh: Updated to those from
	libtools 1.5.4.

2004-03-15  Werner Koch  <wk@gnupg.org>

	* configure.ac: New option --enable-ld-version-script.

2004-02-20  Werner Koch  <wk@gnupg.org>

        Released 0.9.4.
	
	* configure.ac: Bumped LT version to C10/A2/R0.

2004-02-11  Werner Koch  <wk@gnupg.org>

	* autogen.sh (check_version): Removed bashism and simplified.

2004-01-30  Werner Koch  <wk@gnupg.org>

	Released 0.9.3.
	
	* configure.ac: Bumped LT vesion to C9/A1/R2.

2004-01-29  Werner Koch  <wk@gnupg.org>

	Released 0.9.2.

	* configure.ac: Bumbed LT version to C9/A1/R1.

2003-12-19  Werner Koch  <wk@gnupg.org>

	Released 0.9.1.
	
	* configure.ac: Bumbed LT version to C9/A1/R0.

2003-12-08  Werner Koch  <wk@gnupg.org>

	* README.CVS: Enhanced 
	* autogen.sh: Reworked.
	* configure.ac: Add version numbers for autogen.sh.

2003-11-17  Werner Koch  <wk@gnupg.org>

	Released 0.9.0.
